--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body class="align">
   <div class="grid">
       <!-- <form action="https://httpbin.org/post" method="POST" class="form login"> -->
-      <form action="#" method="POST" class="form login">
+      <form action='' method="POST" class="form login">
         <div class="form__field">
           <label for="login__username"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#user"></use></svg><span class="hidden">Username</span></label>
           <input id="login__username" type="text" name="username" class="form__input" placeholder="Username" required>
