--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
-  <title>Document</title>
+  <title>Cambio Online</title>
 </head>
 <body class="align">
   <div class="grid">
