cmbiando status href

--- a/public/perfil.html
+++ b/public/perfil.html
@@ -78,7 +78,7 @@
   <div id="permissionWrapper" class="permissionWrapper">
     <label for="inputFilterPermission" class="listFilterLabel">Buscar</label>
     <input id="inputFilterPermission" type="text" class="listFilterInput"/>
-    <a id="addUser" href="#" class="iconAdd" title="Add new user"></a>
+    <a id="addUser" href="" class="iconAdd" title="Add new user"></a>
     <div class="clear"></div>
     <table id="listFilterPermission" class="listFilterContainer permissionsTable" cellspacing="0" cellpadding="0">
       <thead id="permissionsHead">
@@ -96,35 +96,35 @@
           <td><div class="permissionTag active" data-perm="view">En Progreso</div></td>
           <td><div class="permissionTag" data-perm="delete">Cambiando</div></td>
           <td><div class="permissionTag" data-perm="admin">Finalizado</div></td>
-          <td><a href="#" class="iconRemove deleteUser" title="Remove this user"></a></td>
+          <td><a href="" class="iconRemove deleteUser" title="Remove this user"></a></td>
         </tr>
         <tr>
           <td><span class="iconUser"></span><span contenteditable="true" class="userName">Miguel Araujo</span></td>
           <td><div class="permissionTag active" data-perm="view">En Progreso</div></td>
           <td><div class="permissionTag" data-perm="delete">Cambiando</div></td>
           <td><div class="permissionTag" data-perm="admin">Finalizado</div></td>
-          <td><a href="#" class="iconRemove deleteUser" title="Remove this user"></a></td>
+          <td><a href="" class="iconRemove deleteUser" title="Remove this user"></a></td>
         </tr>
         <tr>
           <td><span class="iconUser"></span><span contenteditable="true" class="userName">Sergio Peña</span></td>
           <td><div class="permissionTag" data-perm="view">En Progreso</div></td>
           <td><div class="permissionTag active" data-perm="delete">Cambiando</div></td>
           <td><div class="permissionTag" data-perm="admin">Finalizado</div></td>
-          <td><a href="#" class="iconRemove deleteUser" title="Remove this user"></a></td>
+          <td><a href="" class="iconRemove deleteUser" title="Remove this user"></a></td>
         </tr>
         <tr>
           <td><span class="iconUser"></span><span contenteditable="true" class="userName">Susana Diaz</span></td>
           <td><div class="permissionTag" data-perm="view">En Progreso</div></td>
           <td><div class="permissionTag" data-perm="delete">Cambiando</div></td>
           <td><div class="permissionTag active" data-perm="admin">Finalizado</div></td>
-          <td><a href="#" class="iconRemove deleteUser" title="Remove this user"></a></td>
+          <td><a href="" class="iconRemove deleteUser" title="Remove this user"></a></td>
         </tr>
          <tr>
           <td><span class="iconUser"></span><span contenteditable="true" class="userName">Juan Quispe</span></td>
           <td><div class="permissionTag" data-perm="view">En Progreso</div></td>
           <td><div class="permissionTag" data-perm="delete">Cambiando</div></td>
           <td><div class="permissionTag active" data-perm="admin">Finalizado</div></td>
-          <td><a href="#" class="iconRemove deleteUser" title="Remove this user"></a></td>
+          <td><a href="" class="iconRemove deleteUser" title="Remove this user"></a></td>
         </tr>
       </tbody>
     </table>
