--- a/public/perfil.html
+++ b/public/perfil.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/main.css">
-  <title>Document</title>
+  <title>Mi Perfil</title>
 </head>
 <body id="perfil">
   <div class="container clearfix1">
